--- a/categories.ipynb
+++ b/categories.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +18,16 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /home/mostafawael/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\mosel\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/mostafawael/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\mosel\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\mosel\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\mosel\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,18 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] [2022-12-25 22:01:37,440:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n",
-      "[WARNING] [2022-12-25 22:01:38,611:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Word2Vec embeddings\n",
     "model = extractWordEmbeddings(training_data['Lemmatization']) # use word2vec to extract the word embeddings\n",
@@ -219,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -247,29 +244,43 @@
      "output_type": "stream",
      "text": [
       "Before balancing:\n",
-      "Class=2, n=5538 (79.250%)\n",
-      "Class=1, n=1012 (14.482%)\n",
-      "Class=0, n=438 (6.268%)\n",
+      "Class=1, n=975 (13.952%)\n",
+      "Class=2, n=3616 (51.746%)\n",
+      "Class=4, n=1025 (14.668%)\n",
+      "Class=9, n=323 (4.622%)\n",
+      "Class=5, n=606 (8.672%)\n",
+      "Class=6, n=112 (1.603%)\n",
+      "Class=3, n=167 (2.390%)\n",
+      "Class=8, n=79 (1.131%)\n",
+      "Class=0, n=67 (0.959%)\n",
+      "Class=7, n=18 (0.258%)\n",
       "After balancing:\n",
-      "Class=2, n=5538 (33.333%)\n",
-      "Class=1, n=5538 (33.333%)\n",
-      "Class=0, n=5538 (33.333%)\n",
+      "Class=1, n=3616 (10.000%)\n",
+      "Class=2, n=3616 (10.000%)\n",
+      "Class=4, n=3616 (10.000%)\n",
+      "Class=9, n=3616 (10.000%)\n",
+      "Class=5, n=3616 (10.000%)\n",
+      "Class=6, n=3616 (10.000%)\n",
+      "Class=3, n=3616 (10.000%)\n",
+      "Class=8, n=3616 (10.000%)\n",
+      "Class=0, n=3616 (10.000%)\n",
+      "Class=7, n=3616 (10.000%)\n",
       "Some notes about dimensions of the data\n",
       "X_train size before cleaning = (6988, 100)\n",
-      "X_train size = (16614, 100)\n",
-      "y_train size = (16614,)\n"
+      "X_train size = (36160, 100)\n",
+      "y_train size = (36160,)\n"
      ]
     }
    ],
    "source": [
     "# convert features into 2d array\n",
     "trainingFeatures = np.array([np.array(xi) for xi in trainingFeatures])\n",
-    "stances = training_data['stance'].to_numpy()\n",
+    "categories = training_data['category'].to_numpy()\n",
     "columns = [\"f\" + str(i + 1) for i in range(len(trainingFeatures[0]))]\n",
     "\n",
     "df = pd.DataFrame(trainingFeatures, columns=columns)\n",
     "df = pd.DataFrame(trainingFeatures)\n",
-    "df['stance'] = stances\n",
+    "df['category'] = categories\n",
     "\n",
     "X_train, y_train = balance_data(df)\n",
     "print(\"Some notes about dimensions of the data\")\n",
@@ -280,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,8 +300,10 @@
      "text": [
       "X_test size = (1398, 100)\n",
       "y_test size = (1398,)\n",
-      "Unique values in the dataset = [-1  0  1]\n",
-      "Unique values in the dataset = [-1  0  1]\n"
+      "Unique values in the dataset = ['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n",
+      " 'restrictions' 'rumors' 'unrelated']\n",
+      "Unique values in the dataset = ['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n",
+      " 'restrictions' 'rumors' 'unrelated']\n"
      ]
     }
    ],
@@ -298,11 +311,11 @@
     "split = 'y'\n",
     "if split == 'y':\n",
     "    # Split the data into train and test\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(trainingFeatures, stances, test_size=0.2, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(trainingFeatures, categories, test_size=0.2, random_state=42)\n",
     "else:\n",
     "    X_test = np.array([np.array(xi) for xi in dev_data['features'].to_numpy()])\n",
     "    # X_test = np.load('out/test_embeddings.npy')\n",
-    "    y_test = dev_data['stance'].to_numpy()\n",
+    "    y_test = dev_data['category'].to_numpy()\n",
     "\n",
     "print(f\"X_test size = {X_test.shape}\")\n",
     "print(f\"y_test size = {y_test.shape}\")\n",
@@ -322,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -331,23 +344,30 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.50      0.04      0.08        93\n",
-      "           0       0.42      0.08      0.13       208\n",
-      "           1       0.80      0.98      0.88      1097\n",
+      "      advice       0.00      0.00      0.00        12\n",
+      "   celebrity       0.76      0.44      0.56       194\n",
+      "   info_news       0.58      0.93      0.71       718\n",
+      "      others       0.00      0.00      0.00        43\n",
+      "    personal       0.41      0.21      0.27       208\n",
+      "        plan       0.33      0.02      0.03       113\n",
+      "    requests       0.33      0.05      0.08        21\n",
+      "restrictions       0.00      0.00      0.00         2\n",
+      "      rumors       0.00      0.00      0.00        18\n",
+      "   unrelated       0.43      0.09      0.14        69\n",
       "\n",
-      "    accuracy                           0.78      1398\n",
-      "   macro avg       0.57      0.37      0.36      1398\n",
-      "weighted avg       0.72      0.78      0.71      1398\n",
+      "    accuracy                           0.58      1398\n",
+      "   macro avg       0.28      0.17      0.18      1398\n",
+      "weighted avg       0.52      0.58      0.50      1398\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7839771101573677"
+       "0.575107296137339"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,56 +375,52 @@
    "source": [
     "# RandomForestClassifier\n",
     "clf = RandomForestClassifier(n_estimators=500, max_depth=15, random_state=0)\n",
-    "_y_train = y_train + 1\n",
-    "_y_test = y_test + 1\n",
+    "\n",
     "model, report = modelPipeline(X_train, y_train, X_test, y_test, clf, 'out/models/clf.model')\n",
     "report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.33      0.08      0.12        93\n",
-      "           1       0.33      0.08      0.12       208\n",
-      "           2       0.80      0.97      0.87      1097\n",
-      "\n",
-      "    accuracy                           0.78      1398\n",
-      "   macro avg       0.49      0.37      0.37      1398\n",
-      "weighted avg       0.70      0.78      0.71      1398\n",
-      "\n"
+      "['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n",
+      " 'restrictions' 'rumors' 'unrelated']\n",
+      "['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n",
+      " 'restrictions' 'rumors' 'unrelated']\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0.7753934191702432"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Invalid classes inferred from unique values of `y`.  Expected: [0 1 2 3 4 5 6 7 8 9], got ['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n 'restrictions' 'rumors' 'unrelated']",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39munique(y_train))\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39munique(y_test))\n\u001b[1;32m----> 5\u001b[0m model, report \u001b[39m=\u001b[39m modelPipeline(X_train, y_train, X_test, y_test, xgb, \u001b[39m'\u001b[39;49m\u001b[39mout/models/xgb.model\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      6\u001b[0m report\n",
+      "File \u001b[1;32md:\\Education\\4th year\\First Semester\\Natural Language Processing\\Project\\NLP-Project\\model.py:26\u001b[0m, in \u001b[0;36mmodelPipeline\u001b[1;34m(X_train, y_train, X_test, y_test, model, model_name)\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmodelPipeline\u001b[39m(X_train, y_train, X_test, y_test, model, model_name):\n\u001b[1;32m---> 26\u001b[0m     model \u001b[39m=\u001b[39m trainModel(X_train, y_train, model)\n\u001b[0;32m     27\u001b[0m     y_pred \u001b[39m=\u001b[39m testModel(X_test, model)\n\u001b[0;32m     28\u001b[0m     report \u001b[39m=\u001b[39m evaluateModel(y_test, y_pred)\n",
+      "File \u001b[1;32md:\\Education\\4th year\\First Semester\\Natural Language Processing\\Project\\NLP-Project\\model.py:7\u001b[0m, in \u001b[0;36mtrainModel\u001b[1;34m(X_train, y_train, model)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrainModel\u001b[39m(X_train, y_train, model):\n\u001b[1;32m----> 7\u001b[0m     model\u001b[39m.\u001b[39;49mfit(X_train, y_train)\n\u001b[0;32m      8\u001b[0m     \u001b[39mreturn\u001b[39;00m model\n",
+      "File \u001b[1;32mc:\\Users\\mosel\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\xgboost\\core.py:620\u001b[0m, in \u001b[0;36mrequire_keyword_args.<locals>.throw_if.<locals>.inner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    618\u001b[0m \u001b[39mfor\u001b[39;00m k, arg \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(sig\u001b[39m.\u001b[39mparameters, args):\n\u001b[0;32m    619\u001b[0m     kwargs[k] \u001b[39m=\u001b[39m arg\n\u001b[1;32m--> 620\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\mosel\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\xgboost\\sklearn.py:1466\u001b[0m, in \u001b[0;36mXGBClassifier.fit\u001b[1;34m(self, X, y, sample_weight, base_margin, eval_set, eval_metric, early_stopping_rounds, verbose, xgb_model, sample_weight_eval_set, base_margin_eval_set, feature_weights, callbacks)\u001b[0m\n\u001b[0;32m   1461\u001b[0m     expected_classes \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_classes_)\n\u001b[0;32m   1462\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   1463\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_\u001b[39m.\u001b[39mshape \u001b[39m!=\u001b[39m expected_classes\u001b[39m.\u001b[39mshape\n\u001b[0;32m   1464\u001b[0m     \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_ \u001b[39m==\u001b[39m expected_classes)\u001b[39m.\u001b[39mall()\n\u001b[0;32m   1465\u001b[0m ):\n\u001b[1;32m-> 1466\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1467\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mInvalid classes inferred from unique values of `y`.  \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1468\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mExpected: \u001b[39m\u001b[39m{\u001b[39;00mexpected_classes\u001b[39m}\u001b[39;00m\u001b[39m, got \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1469\u001b[0m     )\n\u001b[0;32m   1471\u001b[0m params \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_xgb_params()\n\u001b[0;32m   1473\u001b[0m \u001b[39mif\u001b[39;00m callable(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobjective):\n",
+      "\u001b[1;31mValueError\u001b[0m: Invalid classes inferred from unique values of `y`.  Expected: [0 1 2 3 4 5 6 7 8 9], got ['advice' 'celebrity' 'info_news' 'others' 'personal' 'plan' 'requests'\n 'restrictions' 'rumors' 'unrelated']"
+     ]
     }
    ],
    "source": [
     "# Xgboost\n",
     "xgb = XGBClassifier()\n",
-    "_y_train = y_train + 1\n",
-    "_y_test = y_test + 1\n",
-    "model, report = modelPipeline(X_train, _y_train, X_test, _y_test, xgb, 'out/models/xgb.model')\n",
+    "model, report = modelPipeline(X_train, y_train, X_test, y_test, xgb, 'out/models/xgb.model')\n",
     "report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -413,23 +429,30 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.00      0.00      0.00        93\n",
-      "           0       0.00      0.00      0.00       208\n",
-      "           1       0.78      1.00      0.88      1097\n",
+      "      advice       0.00      0.00      0.00        12\n",
+      "   celebrity       0.53      0.14      0.23       194\n",
+      "   info_news       0.53      0.99      0.69       718\n",
+      "      others       0.00      0.00      0.00        43\n",
+      "    personal       0.00      0.00      0.00       208\n",
+      "        plan       0.00      0.00      0.00       113\n",
+      "    requests       0.00      0.00      0.00        21\n",
+      "restrictions       0.00      0.00      0.00         2\n",
+      "      rumors       0.00      0.00      0.00        18\n",
+      "   unrelated       0.00      0.00      0.00        69\n",
       "\n",
-      "    accuracy                           0.78      1398\n",
-      "   macro avg       0.26      0.33      0.29      1398\n",
-      "weighted avg       0.62      0.78      0.69      1398\n",
+      "    accuracy                           0.53      1398\n",
+      "   macro avg       0.11      0.11      0.09      1398\n",
+      "weighted avg       0.34      0.53      0.38      1398\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7846924177396281"
+       "0.5271816881258942"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -591,12 +614,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "43b010d9f7d982b0242266748a4ec71b1a1d9ef54f57a230cfc8a9c34419b385"
    }
   }
  },
